force-app/main/default/objects/Questionario__c/Questionario__c.object-meta.xml
<CustomObject>
    <label>Questionário</label>
    <nameField>
        <displayFormat>Q-{0000}</displayFormat>
        <label>Código</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Questionários</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>