force-app/main/default/objects/Questionario__c/fields/A__c.field-meta.xml
<CustomField>
    <fullName>A__c</fullName>
    <label>A</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Grau_de_satisfacao</valueSetName>
    </valueSet>
</CustomField>