force-app/main/default/objects/Questionario__c/fields/Acessibilidade_de_Loja__c.field-meta.xml
<CustomField>
    <fullName>Acessibilidade_de_Loja__c</fullName>
    <label>Acessibilidade de Loja</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Acessível</fullName>
            </value>
            <value>
                <fullName>Não acessível</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>