force-app/main/default/objects/Questionario__c/fields/Ano_de_compra__c.field-meta.xml
<CustomField>
    <fullName>Ano_de_compra__c</fullName>
    <label>Ano de compra</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>2018</fullName>
            </value>
            <value>
                <fullName>2017</fullName>
            </value>
            <value>
                <fullName>2016</fullName>
            </value>
            <value>
                <fullName>2015</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>