force-app/main/default/objects/Questionario__c/fields/Contacto__c.field-meta.xml
<CustomField>
    <fullName>Contacto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contacto</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Questionários</relationshipLabel>
    <relationshipName>Questionarios</relationshipName>
    <type>Lookup</type>
</CustomField>