force-app/main/default/objects/Questionario__c/fields/Deficiencia_visual__c.field-meta.xml
<CustomField>
    <fullName>Deficiencia_visual__c</fullName>
    <label>Deficiência visual</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cego</fullName>
            </value>
            <value>
                <fullName>Baixa visão</fullName>
            </value>
            <value>
                <fullName>Surdo cego</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>