force-app/main/default/objects/Questionario__c/fields/Divulgacao_de_dados__c.field-meta.xml
<CustomField>
    <fullName>Divulgacao_de_dados__c</fullName>
    <label>Divulgação de dados</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sim</fullName>
            </value>
            <value>
                <fullName>Não</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>