force-app/main/default/objects/Questionario__c/fields/Ja_comprou_na_nossa_empresa__c.field-meta.xml
<CustomField>
    <fullName>Ja_comprou_na_nossa_empresa__c</fullName>
    <label>Já comprou na nossa empresa</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sim</fullName>
            </value>
            <value>
                <fullName>Não</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>