force-app/main/default/objects/Questionario__c/fields/Preferencia_de_futuros_contactos__c.field-meta.xml
<CustomField>
    <fullName>Preferencia_de_futuros_contactos__c</fullName>
    <label>Preferência de futuros contactos</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Telefone</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Outros</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>