force-app/main/default/objects/Questionario__c/fields/Produtos_adquiridos__c.field-meta.xml
<CustomField>
    <fullName>Produtos_adquiridos__c</fullName>
    <label>Produtos adquiridos</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>