force-app/main/default/objects/Questionario__c/fields/Qualidade_do_atendimento_eletronico__c.field-meta.xml
<CustomField>
    <fullName>Qualidade_do_atendimento_eletronico__c</fullName>
    <label>Qualidade do atendimento eletrónico</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Grau_de_satisfacao</valueSetName>
    </valueSet>
</CustomField>