force-app/main/default/objects/Questionario__c/fields/Qualidade_dos_produtos__c.field-meta.xml
<CustomField>
    <fullName>Qualidade_dos_produtos__c</fullName>
    <label>Qualidade dos produtos</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Grau_de_satisfacao</valueSetName>
    </valueSet>
</CustomField>