force-app/main/default/objects/Questionario__c/fields/Recomendacao_da_empresa__c.field-meta.xml
<CustomField>
    <fullName>Recomendacao_da_empresa__c</fullName>
    <label>Recomendação da empresa</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sim</fullName>
            </value>
            <value>
                <fullName>Não</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>