force-app/main/default/objects/Questionario__c/fields/Relacao_qualidade_preco__c.field-meta.xml
<CustomField>
    <fullName>Relacao_qualidade_preco__c</fullName>
    <label>Relação qualidade / preço</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Grau_de_satisfacao</valueSetName>
    </valueSet>
</CustomField>