force-app/main/default/objects/Questionario__c/fields/Servico_de_pos_venda__c.field-meta.xml
<CustomField>
    <fullName>Servico_de_pos_venda__c</fullName>
    <label>Serviço de pós-venda</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Grau_de_satisfacao</valueSetName>
    </valueSet>
</CustomField>