force-app/main/default/objects/Questionario__c/fields/Sugestoes_de_melhoria__c.field-meta.xml
<CustomField>
    <fullName>Sugestoes_de_melhoria__c</fullName>
    <label>Sugestões de melhoria</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>