force-app/main/default/objects/Questionario__c/fields/Tempo_de_entrega__c.field-meta.xml
<CustomField>
    <fullName>Tempo_de_entrega__c</fullName>
    <label>Tempo de entrega</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Grau_de_satisfacao</valueSetName>
    </valueSet>
</CustomField>